# music-blog

./: .dockerignore  .env-sample  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  requirements.txt  supervisord.conf  uwsgi.ini
app/music_blog/: __init__.py  config.py  forms.py  models.py
app/music_blog/static/css/: auth.css
app/music_blog/templates/: base.html  login.html  paginated_list.html  post_detail.html
migrations/versions/: ccf0f5c04b4e_initial_migration.py
music_blog/: __init__.py  auth.py  blog.py  commands.py  config.py  database.py  forms.py  models.py  uwsgi.ini  views.py  wsgi.py
music_blog/migrations/versions/: 0021ae991e08_initial_migrate.py  42b8d9233009_initial_migration.py
music_blog/static/css/: auth.css  fonts.css  main.css
music_blog/templates/: _form_helpers.html  base.html  index.html  login.html  paginated_list.html  post_detail.html  posts_all.html  register.html  style.css
templates/: index.html  login.html  post.html  register.html
templates/assets/css/: auth.css  common.css  main.css  roboto-font.css  style.css
tests/: conftest.py  helpers.py  test_models.py  test_music_blog.py
