[tool.poetry]
name = "music-blog"
version = "0.1.0"
description = ""
authors = ["Aleksandr Kropanev <kropanev@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.3.20"
Flask = "^1.1.2"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.5.3"
Faker = "^5.6.1"
Flask-WTF = "^0.14.3"
email-validator = "^1.1.2"
uWSGI = "^2.0.19"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
